--- a/content/privacy.html
+++ b/content/privacy.html
@@ -43,7 +43,7 @@ not use the site. We hope this policy is straightforward and clear,
 but if you have any questions about it, please email us
 at&nbsp;</font></font></font><font color="#808080"><font face="Arial, serif"><font size="2" style="font-size: 10pt"><i><a href="mailto:info@sachristiandental.org">info@sachristiandental.org</a>.</i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">&nbsp;
 In this policy, “</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
-Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">”
+Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">"
 refers to&nbsp;</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
 Christian Dental Clinics</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">'
 staff, board members, cooperating attorneys, interns, volunteers, and
@@ -51,14 +51,14 @@ consultants, all of whom are bound by law or contract to keep
 information they receive as part of their assistance to </font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
 Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
 confidential. This website,&nbsp;</font></font></font><font color="#808080"><font face="Arial, serif"><font size="2" style="font-size: 10pt"><i><a href="https://www.sachristiandental.org/">sachristiandental.org</a>
-</i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">“site”),
+</i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">"site"),
 is operated on behalf of </font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
 Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">
 </font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">(“San
 Antonio Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">,”
 “</font></font></font><span style="display: inline-block; border: none; padding: 0in"><font face="inherit, serif"><font size="2" style="font-size: 10pt"><i><font color="#777777">SA
-Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">”
-“we,” “us” and “our”). It is our policy to protect your
+Christian Dental Clinic</span></i></font></font></font><font color="#777777"><font face="Arial, serif"><font size="2" style="font-size: 10pt">"
+"we," "us" and "our"). It is our policy to protect your
 Personal Information (as defined below) and to use it in accordance
 with this Privacy Statement.</font></font></font></p>
 <p style="margin-bottom: 0in; line-height: 0.28in"><span style="display: inline-block; border: none; padding: 0in"><font color="#777777">&nbsp;</span></font></p>
@@ -70,12 +70,12 @@ record the numerical Internet Protocol (IP) address of the computer
 you are using; the browser software you use and your operating
 system; the date and time you access our site; and the Internet
 address of the website from which you linked directly to our site.
-This information (“Non-Personal Information”) does NOT identify
+This information ("Non-Personal Information") does NOT identify
 you personally. We use this Non-Personal Information to monitor the
 effectiveness of our site and identify areas of interest and
 improvements. If you choose to use certain features and functions of
 the site, we ask you to provide certain personally identifiable
-information (“Personal Information”). By providing such
+information ("Personal Information"). By providing such
 information, you consent to our collection and use of it, as
 described in this Privacy Statement. We do not collect any Personal
 Information about you when you visit the site unless you give us that
@@ -103,7 +103,7 @@ bit </span></b></font></font></font><font color="#777777"><font face="Arial, ser
 to secure the transfer of data between your browser and our payment
 processor vendor's servers. </font></font></font><font color="#808080"><font face="Arial, serif"><font size="2" style="font-size: 10pt">You
 can verify this by looking for a closed lock icon at the bottom or
-top of your web browser, or looking for “https” at the beginning
+top of your web browser, or looking for "https" at the beginning
 of the address of the web page. While we use encryption to protect
 sensitive information transmitted online, we also protect your
 information offline. Only employees and volunteers who need the
