--- a/content/get_involved/donations.html
+++ b/content/get_involved/donations.html
@@ -9,9 +9,10 @@ tags:
 <div class="bs-docs-featurette">
   
   <script src='//embed.idonate.com/idonate.js'></script>
-  <!--<div class="row">
-    <div class="col-md-8 col-xs-12"><img src="/static/imgs/events/Facebook-Cover.png" class="bs-docs-featurette-img img-responsive"></div>
-    <div class="col-md-4 hidden-xs hidden-sm" data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>
-  </div>-->
+  <div class="row">
+    <!--<div class="col-md-8 col-xs-12"><img src="/static/imgs/events/Facebook-Cover.png" class="bs-docs-featurette-img img-responsive"></div>
+    <div class="col-md-4 hidden-xs hidden-sm" data-idonate-embed='44718fae-d435-4d2a-9cff-332f838c1463'></div>-->
+    <div class="col-md-12">Thank you for bringing back smiles to low-income and homeless Bexar County adults!</div>
+  </div>
   <div data-idonate-embed='df313acc-b85b-43aa-8557-026b1a60360e'></div>
 </div>
